--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
     <div id="main">
         <button class="card1 card">
             <img src="https://4kwallpapers.com/images/walls/thumbs_3t/5534.png" alt="">
-            <h1>abcdefg</h1>
+            <h1>Killjoy</h1>
         </button>
         <button class="card2 card">
             <img src="https://4kwallpapers.com/images/walls/thumbs_3t/4120.png" alt="">
-            <h1>abcdefg</h1>
+            <h1>Yoru</h1>
         </button>
         <button class="card3 card">
             <img src="https://4kwallpapers.com/images/walls/thumbs_3t/5544.jpg" alt="">
-            <h1>abcdefg</h1>
+            <h1>Omen</h1>
         </button>
         <button class="card4 card">
             <img src="https://4kwallpapers.com/images/walls/thumbs_3t/7485.jpg" alt="">
-            <h1>abcdefg</h1>
+            <h1>Sova</h1>
         </button>
         <button class="card5 card">
             <img src="https://4kwallpapers.com/images/walls/thumbs_3t/9311.png" alt="">
-            <h1>abcdefg</h1>    
+            <h1>Cypher</h1>    
         </button>
     </div>
 </body>
